Make pygeos dependency conditional to older python

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,7 +109,7 @@ dependencies = [
   "openmatrix",
   "pandas",
   "pandera",
-  "pygeos",
+  "pygeos; python_version < '3.8'",
   "rtree",
   "scipy",
 ]
