--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,7 +104,7 @@ classifiers = [  # Optional
 # For an analysis of this field vs pip's requirements files see:
 # https://packaging.python.org/discussions/install-requires-vs-requirements/
 dependencies = [
-  "fiona==1.8.5; python_version < '3.8'",
+  "fiona<1.9; python_version < '3.8'",
   "geopandas",
   "numpy==1.17.0; python_version < '3.8'",
   "numpy; python_version >= '3.8'",  
@@ -114,7 +114,7 @@ dependencies = [
   "pandas; python_version >= '3.8'",
   "pandera; python_version > '3.9'",
   "pygeos; python_version < '3.8'",
-#  "pyogrio",
+  "pyogrio; python_version >= '3.8'",
   "rtree",
   "scipy",
   "shapely==1.6.4.post1; python_version < '3.8'"
