Accept any version of openmatrix

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,8 +108,7 @@ dependencies = [
   "geopandas",
   "numpy==1.17.0; python_version < '3.8'",
   "numpy; python_version >= '3.8'",  
-  "openmatrix==0.3.4.1; python_version < '3.8'",
-  "openmatrix; python_version >= '3.8'",
+  "openmatrix",
   "pandas==0.24.2; python_version < '3.8'",
   "pandas; python_version >= '3.8'",
   "pandera; python_version > '3.9'",
