--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,19 +104,17 @@ classifiers = [  # Optional
 # For an analysis of this field vs pip's requirements files see:
 # https://packaging.python.org/discussions/install-requires-vs-requirements/
 dependencies = [
-  "fiona<1.9; python_version < '3.8'",
+  "fiona",
   "geopandas",
-  "numpy==1.17.0; python_version < '3.8'",
-  "numpy; python_version >= '3.8'",  
+  "numpy",  
   "openmatrix",
-  "pandas==0.24.2; python_version < '3.8'",
-  "pandas; python_version >= '3.8'",
+  "pandas",
   "pandera; python_version > '3.9'",
   "pygeos; python_version < '3.8'",
   "pyogrio; python_version >= '3.8'",
   "rtree",
   "scipy",
-  "shapely==1.6.4.post1; python_version < '3.8'"
+  "shapely"
 ]
 
 # List additional groups of dependencies here (e.g. development
